--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,15 +6,29 @@ on:
       - main
 
 jobs:
+  test:
+    uses: daniele-tentoni/cc-codechecker/.github/workflows/test.yml@v0.1.5
+
   release:
     concurrency: release
     runs-on: ubuntu-latest
+    needs: ['test']
 
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
           token: ${{ secrets.GH_TOKEN }}
+
+      - name: Setup Python 3.10
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.10'
+
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-in-project: true
 
       - name: Python Semantic Release
         uses: relekang/python-semantic-release@v7.24.0
