--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,10 +8,12 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    name: Run tests on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         python: ['3.10']
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - uses: actions/checkout@v2
 
@@ -37,4 +39,15 @@ jobs:
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
 
       - name: Run tests
-        run: poetry run python -m pytest --cov-report term-missing:skip-covered --cov=cc_codechecker tests/
+        if: matrix.os != 'ubuntu-latest' || matrix.python != '3.10'
+        run: poetry run python -m pytest tests/
+
+      - name: Run tests with coverage
+        if: matrix.os == 'ubuntu-latest' && matrix.python == '3.10'
+        run: poetry run python -m pytest --cov-report term-missing:skip-covered --cov-fail-under=67 --cov=cc_codechecker tests/
+
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v2
+        with:
+          name: code-coverage-report
+          path: .coverage
