ci(actions): upload artifacts only on ubuntu-latest and python 3.10
Use the same criteria of producing artifacts to upload them obv.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,6 +47,7 @@ jobs:
         run: poetry run python -m pytest --cov-report= --cov-fail-under=67 --cov=cc_codechecker tests/
 
       - name: Archive code coverage results
+        if: matrix.os == 'ubuntu-latest' && matrix.python == '3.10'
         uses: actions/upload-artifact@v2
         with:
           name: code-coverage-report
