--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ jobs:
   release:
     concurrency: release
     runs-on: ubuntu-latest
-    needs: ['test']
+    needs: ["test"]
 
     steps:
       - uses: actions/checkout@v2
@@ -23,7 +23,10 @@ jobs:
       - name: Setup Python 3.10
         uses: actions/setup-python@v2
         with:
-          python-version: '3.10'
+          python-version: "3.10"
+
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
 
       - name: Install Poetry
         uses: snok/install-poetry@v1
