--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python: ['3.10']
+        python: ["3.10"]
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - uses: actions/checkout@v2
@@ -44,11 +44,11 @@ jobs:
 
       - name: Run tests with coverage
         if: matrix.os == 'ubuntu-latest' && matrix.python == '3.10'
-        run: poetry run python -m pytest --cov-report= --cov-fail-under=67 --cov=cc_codechecker tests/
+        run: poetry run python -m pytest --cov-report xml:coverage.xml --cov-fail-under=67 --cov=cc_codechecker tests/
 
       - name: Archive code coverage results
         if: matrix.os == 'ubuntu-latest' && matrix.python == '3.10'
         uses: actions/upload-artifact@v2
         with:
           name: code-coverage-report
-          path: .coverage
+          path: coverage.xml
