ci(actions): install deps before trying to produce reports

--- a/.github/workflows/report-codacy.yml
+++ b/.github/workflows/report-codacy.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   upload:
-    name: Upload Coverage to many services
+    name: Upload Coverage to Codacy
     runs-on: ubuntu-latest
     if: github.event.workflow_run.event == 'pull_request' && github.event.workflow_run.conclusion == 'success'
     steps:
@@ -26,8 +26,22 @@ jobs:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           coverage-reports: coverage.xml
 
+  publish:
+    name: Upload Report to Pages
+    runs-on: ubuntu-latest
+    if: github.event.workflow_run.event == 'pull_request' && github.event.workflow_run.conclusion == 'success'
+    steps:
+      - name: Download artifact
+        uses: dawidd6/action-download-artifact@v2
+        with:
+          workflow: test.yml
+          name: code-coverage-report
+          workflow_conclusion: success
+
       - name: Produce HTML report
-        run: pytest --cov-report html:cov_html
+        run: |
+          pip install pytest pytest-cov
+          python -m pytest --cov-report html:cov_html
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.2.3
