--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,11 +44,13 @@ jobs:
 
       - name: Run tests with coverage
         if: matrix.os == 'ubuntu-latest' && matrix.python == '3.10'
-        run: poetry run python -m pytest --cov-report xml:coverage.xml --cov-fail-under=67 --cov=cc_codechecker tests/
+        run: poetry run python -m pytest --cov-report xml:coverage.xml --cov-report html:cov_html --cov-fail-under=67 --cov=cc_codechecker tests/
 
       - name: Archive code coverage results
         if: matrix.os == 'ubuntu-latest' && matrix.python == '3.10'
         uses: actions/upload-artifact@v2
         with:
           name: code-coverage-report
-          path: coverage.xml
+          path: |
+            coverage.xml
+            cov_html
