--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,17 +25,23 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Upgrade pip
-        run: python -m pip install --upgrade pip
+      # - name: Upgrade pip
+        # run: python -m pip install --upgrade pip
 
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
           virtualenvs-in-project: true
 
-      - name: Python Semantic Release
-        uses: relekang/python-semantic-release@v7.24.0
-        with:
-          github_token: ${{ secrets.GH_TOKEN }}
-          repository_username: __token__
-          repository_password: ${{ secrets.PYPI_TOKEN }}
+      - name: Prepare repo
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "action@github.com"
+          export GH_TOKEN="${{ secrets.GH_TOKEN }}"
+          export PYPI_TOKEN="${{ secrets.PYPI_TOKEN }}"
+          export REPOSITORY_USERNAME="__token__"
+          export REPOSITORY_PASSWORD="${{ secrets.PYPI_TOKEN }}"
+
+      - name: Publish
+        run: |
+          poetry run python -m semantic_release publish --noop -v DEBUG -D commit_author="github-actions <action@github.com>"
