chore(deps): upgrade secondary dependancies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ requires = ["poetry-core>=1.0.0"]
 
 [tool.semantic_release]
 branch = 'main'
-build_command = 'pip install poetry & poetry build'
+build_command = 'poetry build'
 major_on_zero = false
 version_variable = [
   "cc_codechecker/__init__.py:__version__",
