--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -48,11 +48,12 @@ jobs:
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "action@github.com"
-          export GH_TOKEN="${{ secrets.GH_TOKEN }}"
-          export PYPI_TOKEN="${{ secrets.PYPI_TOKEN }}"
-          export REPOSITORY_USERNAME="__token__"
-          export REPOSITORY_PASSWORD="${{ secrets.PYPI_TOKEN }}"
 
       - name: Publish
         run: |
           poetry run python -m semantic_release publish -v DEBUG -D commit_author="github-actions <action@github.com>"
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+          REPOSITORY_USERNAME: __token__
+          REPOSITORY_PASSWORD: ${{ secrets.PYPI_TOKEN }}
