--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,6 +25,11 @@ repos:
       - id: isort
         name: isort (python)
 
+  - repo: https://github.com/pycqa/pydocstyle
+    rev: 6.1.1
+    hooks:
+      - id: pydocstyle
+
   - repo: https://github.com/asottile/pyupgrade
     rev: v2.31.0
     hooks:
