--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pydocstyle = "^6.1.1"
 pylint = "^2.12.2"
 pytest = "^7.0.0"
 pytest-cov = "^3.0.0"
+reuse = "^0.14.0"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
