--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,10 @@ repos:
       - id: name-tests-test
       - id: trailing-whitespace
 
+  - repo: https://github.com/fsfe/reuse-tool
+    rev: latest
+    hooks:
+      - id: reuse
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.931
