ci(actions): use bash as default shell

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,10 @@ on:
       - main
   workflow_call:
 
+defaults:
+  run:
+    shell: bash
+
 jobs:
   test:
     name: Run tests on ${{ matrix.os }}
